--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -5,7 +5,7 @@
         <span class="navbar-toggler-icon"></span>
       </button> -->
 
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
           <li class="nav-item">
             <a class="nav-link"  href="#">Home</a>
           </li>
@@ -16,7 +16,16 @@
             <a class="nav-link " href="#">Disabled</a>
           </li>
         </ul>
-        <form #loginForm="ngForm" class="d-flex" (ngSubmit)="login()"
+
+        <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
+          <a class="dropdown-toggle text-light" dropdownToggle>Welcome user</a>
+          <div class="dropdown-menu mt-3" *dropdownMenu>
+            <a  class="dropdown-item">Edit Profile</a>
+            <div class="dropdown-divider"></div>
+            <a  class="dropdown-item" (click)="logout()">Logout</a>
+          </div>
+        </div>
+        <form *ngIf="(accountService.currentUser$ | async) ===null" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()"
                 autocomplete="off">
           <input 
                 name="username"
